--- a/account/privacy-and-sharing.html
+++ b/account/privacy-and-sharing.html
@@ -281,7 +281,7 @@
                                             >
                                               <div class="relative">
                                                 <div
-                                                  class="_1xkr92p"
+                                                  class="tab"
                                                   data-testid="tab-list-wrapper"
                                                 >
                                                   <div
@@ -320,7 +320,7 @@
                                                     </button>
                                                   </div>
                                                 </div>
-                                                <div class="_1wadwfl"></div>
+                                                <div class="tab__hr"></div>
                                               </div>
                                               <div>
                                                 <div
@@ -968,7 +968,7 @@
                                     >
                                       <div class="relative">
                                         <div
-                                          class="_1xkr92p"
+                                          class="tab"
                                           data-testid="tab-list-wrapper"
                                         >
                                           <div class="tab__list" role="tablist">
@@ -1004,7 +1004,7 @@
                                             </button>
                                           </div>
                                         </div>
-                                        <div class="_1wadwfl"></div>
+                                        <div class="tab__hr"></div>
                                       </div>
                                       <div>
                                         <div
