--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3562,13 +3562,13 @@
                <div class="_5dhkyy">
                 <div id="GALLERY_LIBRARY_MODAL-tabs">
                  <div class="relative">
-                  <div class="_1xkr92p" data-testid="tab-list-wrapper">
+                  <div class="tab" data-testid="tab-list-wrapper">
                    <div class="_qc3ank" role="tablist">
                     <button type="button" id="tab--GALLERY_LIBRARY_MODAL-tabs--0" aria-controls="panel--GALLERY_LIBRARY_MODAL-tabs--0" aria-selected="true" class="tab__btn-active" role="tab">Your photos</button>
                     <button type="button" id="tab--GALLERY_LIBRARY_MODAL-tabs--1" aria-controls="panel--GALLERY_LIBRARY_MODAL-tabs--1" aria-selected="false" class="tab__btn" role="tab" tabindex="-1">Published</button>
                    </div>
                   </div>
-                  <div class="_1wadwfl"></div>
+                  <div class="tab__hr"></div>
                  </div>
                  <div>
                   <div role="tabpanel" id="panel--GALLERY_LIBRARY_MODAL-tabs--0" aria-labelledby="tab--GALLERY_LIBRARY_MODAL-tabs--0">
@@ -4314,13 +4314,13 @@
                <div class="_5dhkyy">
                 <div id="GALLERY_LIBRARY_MODAL-tabs">
                  <div class="relative">
-                  <div class="_1xkr92p" data-testid="tab-list-wrapper">
+                  <div class="tab" data-testid="tab-list-wrapper">
                    <div class="_qc3ank" role="tablist">
                     <button type="button" id="tab--GALLERY_LIBRARY_MODAL-tabs--0" aria-controls="panel--GALLERY_LIBRARY_MODAL-tabs--0" aria-selected="true" class="tab__btn-active" role="tab">Your photos</button>
                     <button type="button" id="tab--GALLERY_LIBRARY_MODAL-tabs--1" aria-controls="panel--GALLERY_LIBRARY_MODAL-tabs--1" aria-selected="false" class="tab__btn" role="tab" tabindex="-1">Published</button>
                    </div>
                   </div>
-                  <div class="_1wadwfl"></div>
+                  <div class="tab__hr"></div>
                  </div>
                  <div>
                   <div role="tabpanel" id="panel--GALLERY_LIBRARY_MODAL-tabs--0" aria-labelledby="tab--GALLERY_LIBRARY_MODAL-tabs--0">
