--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -14761,7 +14761,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -14801,7 +14801,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -14841,7 +14841,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                         </div>
                                         <div class="_11jhslp">
@@ -14896,7 +14896,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -14936,7 +14936,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -14976,7 +14976,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                         </div>
                                         <div class="_11jhslp">
@@ -15027,7 +15027,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                         </div>
                                         <div class="_11jhslp">
@@ -15078,7 +15078,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -15118,7 +15118,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                         </div>
                                         <div class="_11jhslp">
@@ -15169,7 +15169,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                         </div>
                                         <div class="_11jhslp">
@@ -15220,7 +15220,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -15260,7 +15260,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -15300,7 +15300,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -15340,7 +15340,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                         </div>
                                         <div class="_11jhslp">
@@ -15391,7 +15391,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                         </div>
                                         <div class="_11jhslp">
@@ -15446,7 +15446,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -15486,7 +15486,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -15526,7 +15526,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -15570,7 +15570,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -15614,7 +15614,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -15654,7 +15654,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -15694,7 +15694,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -15734,7 +15734,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                         </div>
                                         <div class="_11jhslp">
@@ -15789,7 +15789,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                         </div>
                                         <div class="_11jhslp">
@@ -15840,7 +15840,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -15885,7 +15885,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -15925,7 +15925,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                         </div>
                                         <div class="_11jhslp">
@@ -15976,7 +15976,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -16016,7 +16016,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                         </div>
                                         <div class="_11jhslp">
@@ -16072,7 +16072,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                         </div>
                                         <div class="_11jhslp">
@@ -16130,7 +16130,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -16175,7 +16175,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                           <div>
                                             <div
@@ -16221,7 +16221,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1wadwfl"></div>
+                                            <div class="tab__hr"></div>
                                           </div>
                                         </div>
                                       </div>
