--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -19695,7 +19695,7 @@
                                 <h3 tabindex="-1" class="heading" elementtiming="LCP-target">Special to this farm stay
                                 </h3>
                               </div>
-                              <div class="_1wadwfl"></div>
+                              <div class="tab__hr"></div>
                               <div>
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Self check-in</div>
@@ -19727,7 +19727,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -19760,7 +19760,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -19793,7 +19793,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -19826,7 +19826,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -19859,7 +19859,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -19892,7 +19892,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -19925,7 +19925,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -19958,7 +19958,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -19991,7 +19991,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20024,7 +20024,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20057,7 +20057,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20090,7 +20090,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20123,7 +20123,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20156,7 +20156,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20189,7 +20189,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20222,7 +20222,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20255,14 +20255,14 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                             </div>
                             <div class="_aujnou">
                               <div class="_7blh7hl">
                                 <h3 tabindex="-1" class="heading" elementtiming="LCP-target">Everything you need</h3>
                               </div>
-                              <div class="_1wadwfl"></div>
+                              <div class="tab__hr"></div>
                               <div>
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Wifi</div>
@@ -20294,7 +20294,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20327,7 +20327,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20362,7 +20362,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20397,7 +20397,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20430,7 +20430,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20463,7 +20463,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20496,7 +20496,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20532,7 +20532,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20568,7 +20568,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                               <div>
                                 <div class="_cwu2wau">
@@ -20601,7 +20601,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                               </div>
                             </div>
                           </div>
