--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -24564,7 +24564,7 @@
                             role="tablistcontainer"
                           >
                             <div class="relative">
-                              <div class="_1xkr92p" data-testid="tab-list-wrapper">
+                              <div class="tab" data-testid="tab-list-wrapper">
                                 <div class="_qc3ank" role="tablist">
                                   <button
                                     type="button"
@@ -24588,7 +24588,7 @@
                                   </button>
                                 </div>
                               </div>
-                              <div class="_1wadwfl"></div>
+                              <div class="tab__hr"></div>
                             </div>
                             <div>
                               <div
