--- a/online-experience/dashboard.html
+++ b/online-experience/dashboard.html
@@ -1409,14 +1409,14 @@
             <div class="_1pzwj39">
              <div id="tabs" aria-label="tabs">
               <div class="relative">
-               <div class="_1xkr92p" data-testid="tab-list-wrapper">
+               <div class="tab" data-testid="tab-list-wrapper">
                 <div class="_qc3ank" role="tablist">
                  <button type="button" id="tab--tabs--0" aria-controls="panel--tabs--0" aria-selected="true" class="tab__btn-active" role="tab">Incomplete</button>
                  <button type="button" id="tab--tabs--1" aria-controls="panel--tabs--1" aria-selected="false" class="tab__btn" role="tab" tabindex="-1">Complete</button>
                  <button type="button" id="tab--tabs--2" aria-controls="panel--tabs--2" aria-selected="false" class="tab__btn" role="tab" tabindex="-1">Ignored</button>
                 </div>
                </div>
-               <div class="_1wadwfl"></div>
+               <div class="tab__hr"></div>
               </div>
               <div>
                <div role="tabpanel" id="panel--tabs--0" aria-labelledby="tab--tabs--0">
