--- a/help/help.html
+++ b/help/help.html
@@ -472,7 +472,7 @@
                             <div id="role_tabs" role='tablistcontainer'>
                               <div class="relative">
                                 <div
-                                  class="_1xkr92p"
+                                  class="tab"
                                   data-testid="tab-list-wrapper"
                                 >
                                   <div
@@ -522,7 +522,7 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="_1wadwfl"></div>
+                                <div class="tab__hr"></div>
                                 <button type="button" class="_tfpul05 hidden" data-testid="scroll-back-button">
                                   <div style="background-color: white;">
                                    <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-label="scroll tabs backward" role="img" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"><g fill="none"><path d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"></path></g></svg>
