--- a/payments/payout-methods.html
+++ b/payments/payout-methods.html
@@ -792,7 +792,7 @@
                                     >
                                       <div class="relative">
                                         <div
-                                          class="_1xkr92p"
+                                          class="tab"
                                           data-testid="tab-list-wrapper"
                                         >
                                           <div class="tab__list" role="tablist">
@@ -838,7 +838,7 @@
                                             </button>
                                           </div>
                                         </div>
-                                        <div class="_1wadwfl"></div>
+                                        <div class="tab__hr"></div>
                                       </div>
                                     </div>
                                   </div>
