--- a/payments/service-fee.html
+++ b/payments/service-fee.html
@@ -723,7 +723,7 @@
                                     >
                                       <div class="relative">
                                         <div
-                                          class="_1xkr92p"
+                                          class="tab"
                                           data-testid="tab-list-wrapper"
                                         >
                                           <div class="tab__list" role="tablist">
@@ -779,7 +779,7 @@
                                             </button>
                                           </div>
                                         </div>
-                                        <div class="_1wadwfl"></div>
+                                        <div class="tab__hr"></div>
                                       </div>
                                     </div>
                                   </div>
